--- a/STConsole/STConsole/STConsole.csproj
+++ b/STConsole/STConsole/STConsole.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.5" />
